# dfgmap

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  blif.cpp  blif.hpp  cnf.cpp  cnf.hpp  dfg.cpp  dfg.hpp  e.txt  f.txt  g.txt  gen.cpp  gen.hpp  global.hpp  graph.cpp  graph.hpp  main.cpp  op.cpp  op.hpp  p.txt  sat.cpp  sat.hpp
benchmark/: aes.cpp  mmm.cpp  ring.cpp  sparse.cpp
